--- a/JSbinding/package.json
+++ b/JSbinding/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "ffi": "^2.0.0",
+    "ffi": "^2.0.0"
   },
   "main":"./motors.js"
 }
